--- a/extra.html
+++ b/extra.html
@@ -119,7 +119,7 @@
 <br>
 <div class="videoDiv">
   <video width="100%" controls>
-    <source src="Croco.mp4" type="video/mp4">
+    <source src="CrocoB.mp4" type="video/mp4">
 
   </video>
 </div>
@@ -158,7 +158,7 @@
 
     <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-        <a href="Croco.html" class="w3-button w3-light-grey"><i class="fa fa-arrow-left w3-margin-right"></i>Back</a>
+        <a href="index.html" class="w3-button w3-light-grey"><i class="fa fa-arrow-left w3-margin-right"></i>Back</a>
   
     </footer>
 
