--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
         <div class="w3-row">
             <div class="w3-col m6 w3-center w3-padding-large">
                 <p><b><i class="fa fa-user w3-margin-right"></i>CROCO</b></p><br>
-<<<<<<< HEAD
+
                 <img src="_aarushi_12-20210810-0002.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me"
-=======
+                    width="500" height="333">
                 
             </div>
 
