--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="w3-col m6 w3-center w3-padding-large">
                 <p><b><i class="fa fa-user w3-margin-right"></i>CROCO</b></p><br>
 
-                <img src="_aarushi_12-20210811-0011.jpg"  
+                <img src="Capture.PNG" class="w3-round w3-image w3-opacity w3-hover-opacity-off" 
                     width="500" height="333">
                 
             </div>
